argocd/applications/convex/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convex-backend
spec:
  type: ClusterIP
  selector:
    app: convex-backend
  ports:
    - name: ws
      port: 3210
      targetPort: api-ws
    - name: http
      port: 3211
      targetPort: api-http
