argocd/applications/convex/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convex-dashboard
  annotations:
    tailscale.com/hostname: convex
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: convex-dashboard
  ports:
    - name: http-web
      port: 80
      targetPort: http
